--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://HyPeeD:6Bkla3CyNWfP@ep-late-shape-a2740eqn-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&pgbouncer=true"
-DIRECT_URL="postgresql://HyPeeD:6Bkla3CyNWfP@ep-late-shape-a2740eqn.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=""
+DIRECT_URL=""
 AUTH_SECRET="2f3e4a6b8c"
 
 FB_CLIENT_ID="1573951256687539"
