--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ DIRECT_URL=""
 AUTH_SECRET="2f3e4a6b8c"
 
 FB_CLIENT_ID="1573951256687539"
-FB_CLIENT_SECRET="6d4352042d7e6c4eefe448b2f309f1ea"
+FB_CLIENT_SECRET=""
 FB_REDIRECT_URI="http://localhost:3000/dashboard/add"
 PUBLIC_APP_NAME="RePublish"
