--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DATABASE_URL=""
 DIRECT_URL=""
 AUTH_SECRET="2f3e4a6b8c"
 
-FB_CLIENT_ID="1573951256687539"
+FB_CLIENT_ID=""
 FB_CLIENT_SECRET=""
 FB_REDIRECT_URI="http://localhost:3000/dashboard/add"
 PUBLIC_APP_NAME="RePublish"
